tests/snapshots/codegen__.__tests__files__chibicc__bitfield.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "sizeof(struct {int x:1; }) => 4\nsizeof(struct {long x:1; }) => 8\nsizeof(struct bit1) => 4\n({ struct bit1 x; x.a=1; x.b=2; x.c=3; x.d=4; x.e=5; x.a; }) => 1\n({ struct bit1 x={1,2,3,4,5}; x.a; }) => 1\n({ struct bit1 x={1,2,3,4,5}; x.b; }) => 2\n({ struct bit1 x={1,2,3,4,5}; x.c; }) => -1\n({ struct bit1 x={1,2,3,4,5}; x.d; }) => -4\n({ struct bit1 x={1,2,3,4,5}; x.e; }) => -3\ng45.a => 1\ng45.b => 2\ng45.c => 3\ng46.a => 0\ng46.b => 0\ng46.c => 0\n({ T3 x={1,2,3}; x.a++; }) => 1\n({ T3 x={1,2,3}; x.b++; }) => 2\n({ T3 x={1,2,3}; x.c++; }) => 3\n({ T3 x={1,2,3}; ++x.a; }) => 2\n({ T3 x={1,2,3}; ++x.b; }) => 3\n({ T3 x={1,2,3}; ++x.c; }) => 4\nsizeof(struct {int a:3; int c:1; int c:5;}) => 4\nsizeof(struct {int a:3; int:0; int c:5;}) => 8\nsizeof(struct {int a:3; int:0;}) => 4\nOK\n"
status: 0
